objects/Effective_Working_Days__c.object
<CustomObject>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <label>Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_Billing_Region__c</fullName>
        <label>IND Billing Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Effective Working Day</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Month__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Days__c</columns>
        <columns>Fiscal_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Effective Working Days Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Effective Working Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>